Add MergedResources in documentation